--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/adityaraval/express-minimal#readme",
   "dependencies": {
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
