--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "express-minimal",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node server/server.js --presets es2015,stage-2",
+    "build": "babel server -d dist",
+    "serve": "node dist/server.js"
   },
   "repository": {
     "type": "git",
