--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node server/server.js --presets es2015,stage-2",
     "build": "babel server -d dist",
-    "serve": "node dist/server.js"
+    "serve": "nodemon dist/server.js"
   },
   "repository": {
     "type": "git",
