--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/adityaraval/express-minimal#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.11.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
